better sort example

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           <td>Charles Dickens</td>
           <td>1859</td>
           <td>932</td>
-          <td>A84gaw935</td>
+          <td>B84gaw935</td>
         </tr>
         <tr>
           <td>Antes de ser libres</td>
           <td>Julia Alvarez</td>
           <td>2004</td>
           <td>871</td>
-          <td>rE09rtc42</td>
+          <td>bE09rtc42</td>
         </tr>
         <tr>
           <td>Stranger in a Strange Land</td>
@@ -48,7 +48,7 @@
           <td>Mike Monteiro</td>
           <td>2012</td>
           <td>124</td>
-          <td>5fSAdsw30</td>
+          <td>afSAdsw30</td>
         </tr>
         <tr>
           <td>Orthodoxy</td>
