--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="utf-8">
 <title>Table Sorter</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.14.0.css">
+<script src="//code.jquery.com/qunit/qunit-1.14.0.js"></script>
+
 <link rel="stylesheet" href="bootstrap.min.css">
 <link rel="stylesheet" href="tablesort.css">
 <script src="tablesort.js"></script>
@@ -59,6 +63,9 @@
         </tr>
       </tbody>
     </table>
+    <div id="qunit"></div>
+    <div id="qunit-fixture"></div>
   </div>
+  <script src="tests.js"></script>
 </body>
 </html>
