add info to readme

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <div class="container">
     <h1>Table Sorter</h1>
+    <p>This is a test page for some table sorting JavaScript I wrote. Interact with this table to see how it works. Click the columns to sort the table. Below the table are some unit tests that verify that the sorter it working correctly. You can find <a href="https://github.com/josiahsprague/table-sorter">the code on GitHub</a>.</p>
     <table id="sortable-table" class="table table-striped table-hover table-sortable">
       <thead>
         <tr>
